plang/testing/logs/false-incorrect/74/program74.p.p
p pHa e (F1U) :- gbi, (yoT5D Pv (h3UN (pp07 Ru (L39FU)) (AsIn)) (eM7P (d (Ex) QVzjk (Rosv)) TzVVv)); ((r Ytm mQh)); (i1K (kHm) (ZO) (L6zLp); aL (kL4a (X)) (yABlb (T)) TP7B fzWP, tb (lfHT (VE)) Bk (S5sA)); g pL (Y) OpIy tdvD; (iAhv rQ v0MBi (Vyu); d1ek (mKs (esle X bBj3o (QV) B9wa))); jr, oX (yY (G4) (ty (ZEM) L (Hs1B)) epZ Hst), h (P8FD1) tIr JobRI (kj00 xXlV (co3t0) (IwwN)), c5A AJD Ek TYV (W9h); oB (L); fjT4.

g (FXEQy) (LvRa) X1Uj t :- l (A) (d2e h lghwQ XM1hT); ((ot OJi lNZDk (ECxtX) (vD8 h YxG92)); dV2 Lk4iN; j Io; mvmsF Ikg (or9r) Ay9aW).

yG8E.

yStT (BOzU) (M9U) Y2GlM :- ((r1hu), opT xH (L)); ((hd (P) ViVV2 y8n; wjG axAj (Bb6T) (Xy) O)), (wwO f (Ptm5) QfE9 qJsQo); nQ MsQsn (bU1R (oFkuI UnBDF Jj) (fPL aRR aXkl vQIcJ) E8f (XM7WU)); hJ (MQ) (chpQ (IUrO) ZpdCc (FHYC) (VKfr)) (nXKE lKo6) (bfT c SHsq G9Qcz), (y6F do JsAr gX, bD (G6mWs) F9L7K (VX1)).
qH83 (Kx6Jr) (Wq).

c.

zW (Kyo) sfyq.
q3Wg H (A) Rws27 :- tJrs fdMt; (yia b4 (TcGzt)); ((pGPK (XWpI) sal)); ((uk C0, qZvI M), g (pwScR) Qt (D); j FSVZo QEgTJ).


wuVy (L8) (kd4 (tK yP5GM f) (HdAyS) C) :- (bCUH pAN).


s W61O (Hz4yG) :- (yuzT (kCyK (X)) Sss (e Rm)); x (o Fxnu (fFQ (WhQ) tz okT gF) (A) (VAJ)).
uoZ :- qL4.

mzn K :- (n mDt dSRYk).

fn Is.

? ((ldkR (PUzDd))), (zbHqI (Ml6)).

